# TAME-MT

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  release-checklist.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  wheels.yml
benchmarks/: README.md  bench_synthetic.py  validate_fast_recall.py  validate_threshold_exact.py
benchmarks/results/: synthetic_100k_2k_2026-06-27.summary.json  synthetic_100k_2k_2026-06-27.summary.md  synthetic_1m_2k_2026-06-27.summary.json  synthetic_1m_2k_2026-06-27.summary.md
docs/: api.md  cli.md  exact_vs_approx.md  interpretation.md  json_schema.md  method_spec.md  metric_card.md  native_backend.md  paper_protocol.md  performance.md  privacy.md  public_corpora_demo.md  release.md  reproducibility.md  validation_plan.md
examples/public_corpora_demo/: README.md  opus100_demo_summary.csv  opus100_demo_summary.md  performance_notes.md  run_opus100_demo.py
examples/public_corpora_demo/results/: quick.summary.csv  quick.summary.json  quick.summary.md  standard.summary.csv  standard.summary.json  standard.summary.md
examples/toy/: README.md  hyp.out  train.src
schemas/: segment_diagnostic.v1.schema.json  tame_cache.v1.schema.json  tame_index_manifest.v1.schema.json  tame_report.v1.schema.json
scripts/: acceptance.sh  check_versions.py  prepare_pypi_upload.py  wheel_smoke.py
src/: fingerprint.rs  lib.rs  ngrams.rs  similarity.rs  types.rs  validation.rs
src/index/: exact.rs  fast.rs  mod.rs  pair.rs  query.rs  tests.rs  validation.rs  workspace.rs
src/tame_mt/: __init__.py  __main__.py  api.py  approx_validation.py  artifacts.py  bins.py  cli.py  config.py  exact.py  exceptions.py  exposure.py  index.py  io.py  json_utils.py  native.py  ngrams.py  normalize.py  performance.py  persistence.py  report.py  schema.py  scoring.py  similarity.py  tm.py  warnings.py
src/tame_mt/demos/: __init__.py  opus100.py
src/tame_mt/index/: __init__.py  base.py  factory.py  modes.py  native.py  python_exact.py
src/tame_mt/metrics/: __init__.py  sacre.py  weighted_bleu.py
tests/: test_api.py  test_approx_validation.py  test_artifacts.py  test_bins.py  test_cli.py  test_config.py  test_exact.py  test_exposure.py  test_index.py  test_io.py  test_json_schemas.py  test_ngrams.py  test_normalize.py  test_persistence.py  test_prepare_pypi_upload.py  test_properties.py  test_report.py  test_scoring.py  test_similarity.py  test_tm.py  test_version.py
tests/fixtures/: test.ref  test.src  train.tgt
