[package]
name = "tame-mt-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native nearest-neighbor backend for TAME-MT"
homepage = "https://github.com/hunterschep/TAME-MT"
repository = "https://github.com/hunterschep/TAME-MT"
documentation = "https://github.com/hunterschep/TAME-MT#readme"
exclude = [
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    "demo_runs/**",
    "dist/**",
    "target/**",
    "**/__pycache__/**",
    "*.so",
]

[lib]
name = "tame_mt_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
rayon = "1.10"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
