[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tame-mt"
version = "0.1.0"
description = "Training-aware machine translation evaluation for MT."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Hunter M Scheppat" }
]
keywords = ["machine translation", "evaluation", "bleu", "chrf", "low-resource"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "numpy>=1.23",
  "sacrebleu>=2.0",
  "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=7.0",
]

[project.scripts]
tame-mt = "tame_mt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
